--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 
     <h1>Age Calculator</h1>
     <p class="subtitle">Calculate your exact age instantly</p>
+    <nav class="nav">
+    <a href="index.html">Home</a> |
+    <a href="../percentage-calculator/index.html">Percentage Calculator</a> |
+    <a href="../loan-calculator/index.html">Loan Calculator</a> |
+    <a href="privacy.html">Privacy Policy</a> |
+    <a href="contact.html">Contact</a>
+</nav>
+
 
     <div class="card">
         <h2>Enter Your Date of Birth</h2>
@@ -49,8 +57,44 @@
         <p>Yes. The calculator uses actual calendar date differences.</p>
     </section>
 
+    <section class="content">
+
+<h2>How This Age Calculator Works</h2>
+<p>
+This free age calculator calculates your exact age in years, months and days
+based on your date of birth. Simply enter your birth date and today's date
+will automatically be used to calculate your age.
+</p>
+
+<h2>Why Calculate Your Age?</h2>
+<p>
+Knowing your precise age is useful for official documents, retirement planning,
+insurance applications, school admissions and legal age verification.
+</p>
+
+<h2>How Age Is Calculated</h2>
+<p>
+Age is calculated by subtracting the birth date from the current date and
+breaking the result down into years, months and days.
+</p>
+
+<h2>Frequently Asked Questions</h2>
+
+<h3>Is this age calculator accurate?</h3>
+<p>Yes, it uses standard date calculations to provide accurate results.</p>
+
+<h3>Does it account for leap years?</h3>
+<p>Yes, leap years are automatically included in the calculation.</p>
+
+<h3>Can I use this on mobile?</h3>
+<p>Yes, the calculator works on all modern devices.</p>
+
+</section>
+
+
 </div>
 
 <script src="script.js"></script>
 </body>
 </html>
+
