Enhance age calculator HTML structure and content
Updated the age calculator's title and description for clarity and added mobile-friendly features.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Age Calculator – Calculate Exact Age Online</title>
-    <meta name="description" content="Free online age calculator. Calculate your exact age in years, months, days and find out how many days until your next birthday.">
+    <title>Age Calculator – Calculate Exact Age in Years, Months & Days</title>
+    <meta name="description" content="Free online age calculator. Calculate your exact age in years, months and days instantly. Simple, accurate and mobile friendly.">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -97,4 +98,5 @@ breaking the result down into years, months and days.
 <script src="script.js"></script>
 </body>
 </html>
+
 
